--- a/ProjectDashboard.html
+++ b/ProjectDashboard.html
@@ -1342,7 +1342,9 @@
                         </td>
                         <td class="px-6 py-4">
                             <div class="font-medium text-slate-800 text-base mb-1">
-                                ${c.title} ${c._manual ? '<span class="text-indigo-500 text-[10px] ml-1 opacity-70" title="自定義勘誤標題">📝</span>' : ''}
+                                ${c.title} 
+                                ${c._manual ? '<span class="text-indigo-500 text-[10px] ml-1 opacity-70" title="自定義勘誤標題">📝</span>' : ''}
+                                ${c.chatAudit ? '<span class="text-teal-500 text-[10px] ml-1 opacity-80" title="具備完整對話日誌審計">📋</span>' : ''}
                             </div>
                             <div class="text-xs text-slate-500 flex items-center gap-1">
                                 <i class="fa-regular fa-clock opacity-60"></i>${timeRange}
@@ -1420,7 +1422,9 @@
                 <tr class="border-b border-slate-100 hover:bg-slate-50">
                     <td class="px-4 py-3 text-slate-400 text-xs cursor-help" title="${c.summary || '無摘要'}">${c._seq}</td>
                     <td class="px-4 py-3 font-medium">
-                        ${c.title} ${c._manual ? '<span class="text-indigo-500 text-[10px] ml-1 opacity-70" title="自定義勘誤標題">📝</span>' : ''}
+                        ${c.title} 
+                        ${c._manual ? '<span class="text-indigo-500 text-[10px] ml-1 opacity-70" title="自定義勘誤標題">📝</span>' : ''}
+                        ${c.chatAudit ? '<span class="text-teal-500 text-[10px] ml-1 opacity-80" title="具備完整對話日誌審計">📋</span>' : ''}
                     </td>
                     <td class="px-4 py-3 text-xs">${c.project}</td>
                     <td class="px-4 py-3 text-xs text-slate-600">${c.engineer || '-'}</td>
